UnicornBattle/Assets/AppCenter/Plugins/iOS/Core/Utility/DeviceHelper.h

// Copyright (c) Microsoft Corporation. All rights reserved.
//
// Licensed under the MIT license.

extern "C" const char* app_center_unity_device_sdk_name(void* device);
extern "C" const char* app_center_unity_device_sdk_version(void* device);
extern "C" const char* app_center_unity_device_model(void* device);
extern "C" const char* app_center_unity_device_oem_name(void* device);
extern "C" const char* app_center_unity_device_os_name(void* device);
extern "C" const char* app_center_unity_device_os_version(void* device);
extern "C" const char* app_center_unity_device_os_build(void* device);
extern "C" int app_center_unity_device_os_api_level(void* device);
extern "C" const char* app_center_unity_device_locale(void* device);
extern "C" int app_center_unity_device_time_zone_offset(void* device);
extern "C" const char* app_center_unity_device_screen_size(void* device);
extern "C" const char* app_center_unity_device_app_version(void* device);
extern "C" const char* app_center_unity_device_carrier_name(void* device);
extern "C" const char* app_center_unity_device_carrier_country(void* device);
extern "C" const char* app_center_unity_device_app_build(void* device);
extern "C" const char* app_center_unity_device_app_namespace(void* device);